# FRDC-ML

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  cml.sh  pyproject.toml  requirements.txt  rsc.dvc
.devcontainer/: devcontainer.json
.dvc/: config
.github/workflows/: basic-tests.yml  comment.yml  model-tests.yml  model.yml  python-package.yml
Writerside/: d.tree  writerside.cfg
Writerside/topics/: Dataset.md  Get-Started-with-Dev-Containers.md  Getting-Started.md  MixMatch.md  Model-Test-Chestnut-May-Dec.md  Overview.md  Retrieve-our-Datasets.md  custom-k-aug-dataloaders.md  load.dataset.md  load.gcs.md  load.md  mix-match-module.md  mix-match.md  preprocessing.extract_segments.md  preprocessing.glcm_padded.md  preprocessing.morphology.md  preprocessing.scale.md  train.frdc_lightning.md
docs/: HelpTOC.json  Map.jhm  config.json  custom-k-aug-dataloaders.html  get-started-with-dev-containers.html  getting-started.html  load-dataset.html  load-gcs.html  mix-match-module.html  mix-match.html  model-test-chestnut-may-dec.html  overview.html  preprocessing-extract-segments.html  preprocessing-glcm-padded.html  preprocessing-morphology.html  preprocessing-scale.html  retrieve-our-datasets.html  train-frdc-lightning.html
pipeline/model_tests/: README.md  facenet.py  utils.py
pipeline/model_tests/chestnut_dec_may/: augmentation.py  evaluate.py  main.py  preprocess.py  train_val_test_split.py  utils.py
rsc/: README.md
rsc/DEBUG/0/: .gitignore  bounds.csv.dvc  result.tif.dvc  result_Blue.tif.dvc  result_Green.tif.dvc  result_NIR.tif.dvc  result_Red.tif.dvc  result_RedEdge.tif.dvc  scratch.py  scratch.py.dvc
scripts/: gen_result_jpg.py
src/: .gitignore  main.py  pyproject.toml  tutorial.ipynb
src/TerraformDraft -1/: main.tf  main_chatgpt.tf  main_domain_ssl.tf  main_firewall.tf  provider.tf  startup-script.sh  variables.tf  versions.tf
src/evaluate/: __init__.py
src/frdc/: conf.py
src/frdc/evaluate/: __init__.py  evaluate.py
src/frdc/load/: __init__.py  annotations.py  dataset.py  frdc_dataset.py  gcs.py  label_studio.py  load.py  preset.py
src/frdc/models/: __init__.py  efficientnetb1.py  facenet.py  inceptionv3.py
src/frdc/preprocess/: __init__.py  augmentation.py  extract_segments.py  glcm_padded.py  morphology.py  preprocess.py  scale.py
src/frdc/train/: __init__.py  frdc_datamodule.py  frdc_datamodule_new.py  frdc_module.py  mixmatch_module.py  stratified_sampling.py  train.py
src/frdc/utils/: __init__.py  ema.py  file_cache.py  utils.py  (+1 more)
src/label-studio/: docker-compose.yml  dump.sh
src/load/: load.py
src/preprocess/: preprocess.py
tests/: conftest.py  test_dummy.py  utils.py
tests/integration_tests/: test_dummy.py  test_pipeline.py  test_researcher_use_case.py
tests/model_tests/: test_facenet.py  utils.py
tests/unit_tests/: test_frdc_dataset.py  test_gcs.py  test_preprocess.py
(+17 files in other folders)
