[tool.poetry]
name = "frdc-ml"
version = "0.1.0"
description = ""
authors = ["Evening"]
license = "MIT"
readme = "README.md"
packages = [{include = "frdc_ml"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.25.2"
scikit-image = "^0.21.0"
scikit-learn = "^1.3.0"
seaborn = "^0.12.2"
matplotlib = "^3.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
