[tool.poetry]
name = "frdc-ml"
version = "0.1.0"
description = ""
authors = ["Eve-ning"]
license = "MIT"
readme = "README.md"
packages = [{ include = "src/frdc" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "^1.25.2"
scikit-image = "0.22.0"
scikit-learn = "^1.3.0"
seaborn = "^0.12.2"
matplotlib = "^3.7.3"
google-cloud-storage = "^2.10.0"
tqdm = "^4.66.1"
xxhash = "^3.4.1"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
torch = "^2.1.0"
glcm-cupy = "0.2.1"
torchvision = "^0.16.0"
torchaudio = "^2.1.0"
lightning = "^2.0.9.post0"
cupy-cuda12x = "^12.2.0"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = [
    "src"
]
testpaths = [
    "tests/unit_tests",
    "tests/integration_tests",
]