[tool.poetry]
name = "frdc-ml"
version = "0.1.0"
description = ""
authors = ["Eve-ning"]
license = "MIT"
readme = "README.md"
packages = [{ include = "src/frdc" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "^1.25.2"
scikit-image = "0.22.0"
scikit-learn = "^1.3.0"
seaborn = "^0.13.0"
matplotlib = "^3.7.3"
google-cloud-storage = "^2.10.0"
tqdm = "^4.66.1"
xxhash = "^3.4.1"
label-studio-sdk = "^0.0.32"

#torch = {version="^2.1.0", source="pytorch"}
#torchvision = {version="^0.16.0", source="pytorch"}
#torchaudio = {version="^2.1.0", source="pytorch"}
#lightning = "^2.0.9.post0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pre-commit = "^3.5.0"
black = "^23.10.0"
flake8 = "^6.1.0"
wandb = "^0.16.0"




[tool.poetry.group.glcm.dependencies]
glcm-cupy = "0.2.1"
cupy-cuda12x = "^12.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = [
    "src"
]
testpaths = [
    "tests/unit_tests",
    "tests/integration_tests",
]
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s %(levelname)s %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_file = "pytest.log"
log_file_level = "INFO"
log_file_format = "%(asctime)s %(levelname)s %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"


[tool.black]
line-length = 79

